--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 .text {
     font-size: 24px;
     line-height: 24px;
+    display: inline-block;
 }
 .inputBox {
     width: 86px;
@@ -29,4 +30,33 @@ body {
 }
 .result {
     margin-left: 10px;
+    color: #373A3C;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: bold;
+    text-decoration-line: underline;
+}
+.loaded {
+    display: none;
+}
+.tooLarge {
+    font-size: 16px;
+    line-height: 24px;
+    color: #A94442;
+    background-color: #F2DEDE;
+    border: 1px solid #EBCCCC;
+    border-radius: 4px;
+    padding: 2px;
+    width: 180px;
+    height: 33px;
+    margin-left: 85px;
+}
+.inputError {
+    border: 1px solid #D9534F;
+    color: #D9534F;
+}
+.error {
+    color: #D9534F;
+    font-size: 16px;
+    line-height: 24px;
 }
