--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,16 @@ body {
     font-size: 54px;
     line-height: 72px;
     color: #373A3C;
-    margin-top: 30px;
+    margin: 30px 10px 30px 0px;
     display: inline-block;
-    margin-right: 10px;
+}
+
+.res-lines {
+    font-size: 18px;
+    line-height: 18px;
+    color: #373A3C;
+}
+.res-lines p {
+    border-bottom: 1px solid black;
+    padding-bottom: 8px;
 }
